test/sema/typeck/trait/super-trait-cycle-transitive.out
error: cycle in type hierarchy detected.
--> super-trait-cycle-transitive.dora:3:10
 | trait A: B {}
 | trait B: C {}
 | trait C: A {}
            ~
 | 
1 error found.
