test/sema/typeck/trait/super-trait-cycle-transitive.dora
trait A: B {}
trait B: C {}
trait C: A {}
